<?xml version="1.0"?>

<resources>

    <string name="app_name">BookApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">BookApp</string>

    <string name="nav_header_subtitle">mTechSoft@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="welcome">welcome</string>

    <string name="action_settings">Settings</string>

    <string name="nav_dashboard">DashBoard</string>

    <string name="nav_history">History</string>

    <string name="nav_share">Share</string>

    <string name="nav_quitApp">Quit App</string>

    <string name="story">Let us enjoy reading this story of The Thirsty Crow!. Once, a crow was very thirsty. The crow searched for water everywhere. “Kaa, Kaa, Kaa…" AT last he saw a pot with very little water in it. He put his beak inside. But he could not reach down the water. The crow thought of a plan. He picked some pebbles and dropped then into the pot one by one. The water level rose.The crow drank the water and flew away happily.</string>
    <string name="btn_start_quiz">Start Quiz</string>

    <string name="invalid_username">Not a valid username</string>

    <string name="invalid_password">Password must be >5 characters</string>

    <string name="mismatch_password">Password Mismatch characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="success_register">Successfully Registerd</string>
    //landingActivity
    <string name="signup">SignUp</string>

    <string name="signin">SignIn</string>
    //SignInFragment
    <string name="email">abc@gmail.com</string>

    <string name="password">Password</string>

    <string name="login">Login</string>

    <string name="chk_remember_me">Remember me</string>

    <string name="create_account">Create a Account?</string>

    <string name="forget_pass">Forget Password?</string>
    //SignUpFragment
    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="confirm_pass">Confirm Password</string>

    <string name="strt_quiz">Start Quiz</string>
    //customChapterDetailToolbar
    <string name="title">Title</string>
    //MainFragment
    <string name="tv_books">Books</string>

    <string name="tv_poem">Poems</string>
    //QuizCategoryFramnet
    <string name="tv_easy">EASY</string>

    <string name="tv_average">AVERAGE</string>

    <string name="tv_difficult">DIFFICULT</string>

    <string name="tv_random">RANDOM</string>
    //ResultSheetFragent
    <string name="tv_result_sheet">- TOTAL Mcqs : 100 \n- ATTEMPTED : 100 \n-UN ATTEMPTED :0 \n-TRUE : 80 \n- FALSE : 20 \n- PERCENTAGE : 80%</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="warn_press_back_to_exit">Press BACK to exit!</string>

</resources>