<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="Logout" />

    </group>

</menu>
