<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"	xmlns:tools="http://schemas.android.com/tools"	android:layout_width="match_parent"	android:layout_height="match_parent"	android:background="@drawable/book_img7"	android:orientation="vertical"	tools:context=".fragments.login.SignupFragment">	<ImageView		android:layout_width="100dp"		android:layout_height="100dp"		android:layout_gravity="center"		android:layout_marginTop="30dp"		android:layout_centerHorizontal="true"		android:src="@drawable/logo"/>	<LinearLayout		android:id="@+id/ll_signup"		android:layout_width="match_parent"		android:layout_height="wrap_content"		android:layout_marginTop="20dp"		android:orientation="vertical"		android:layout_centerInParent="true"		android:padding="@dimen/activity_vertical_margin">		<EditText			android:id="@+id/et_first_name"			android:layout_width="match_parent"			android:layout_height="wrap_content"			android:backgroundTint="@color/colorWhite"			android:drawableStart="@drawable/ic_person_white_24dp"			android:drawablePadding="10dp"			android:hint="@string/first_name"			android:inputType="textPersonName"			android:selectAllOnFocus="true"			android:textColor="#fff"			android:textColorHint="#fff"			android:textSize="@dimen/text_size_normal" />		<EditText			android:id="@+id/et_last_name"			android:layout_width="match_parent"			android:layout_height="wrap_content"			android:backgroundTint="@color/colorWhite"			android:drawableStart="@drawable/ic_person_white_24dp"			android:drawablePadding="10dp"			android:hint="@string/last_name"			android:inputType="textPersonName"			android:selectAllOnFocus="true"			android:textColor="@color/colorWhite"			android:textColorHint="@color/colorWhite"			android:textSize="@dimen/text_size_normal" />		<EditText			android:id="@+id/et_email"			android:layout_width="match_parent"			android:layout_height="wrap_content"			android:backgroundTint="#fff"			android:drawableStart="@drawable/ic_email_white_24dp"			android:drawablePadding="10dp"			android:hint="@string/email"			android:imeOptions="actionDone"			android:inputType="textEmailAddress"			android:selectAllOnFocus="true"			android:textColor="@color/colorWhite"			android:textColorHint="@color/colorWhite"			android:textSize="@dimen/text_size_normal" />		<EditText			android:id="@+id/et_pass"			android:layout_width="match_parent"			android:layout_height="wrap_content"			android:backgroundTint="#fff"			android:drawableStart="@drawable/ic_lock_white_24dp"			android:drawablePadding="10dp"			android:hint="@string/password"			android:imeOptions="actionDone"			android:inputType="textPassword"			android:selectAllOnFocus="true"			android:textColor="#fff"			android:textColorHint="#fff"			android:textSize="@dimen/text_size_normal" />		<EditText			android:id="@+id/et_confirm_pass"			android:layout_width="match_parent"			android:layout_height="wrap_content"			android:backgroundTint="#fff"			android:drawableStart="@drawable/ic_lock_white_24dp"			android:drawablePadding="10dp"			android:hint="@string/confirm_pass"			android:imeOptions="actionDone"			android:inputType="textPassword"			android:selectAllOnFocus="true"			android:textColor="#fff"			android:textColorHint="#fff"			android:textSize="@dimen/text_size_normal" />		<ProgressBar			android:id="@+id/loading"			android:layout_width="wrap_content"			android:layout_gravity="center"			android:progressTint="@color/colorWhite"			android:layout_height="wrap_content"			android:visibility="invisible" />		<Button			android:id="@+id/bSignup"			android:layout_width="150dp"			android:layout_height="40dp"			android:layout_gravity="center"			android:layout_marginTop="20dp"			android:layout_marginBottom="30dp"			android:background="@drawable/btn_selector_style"			android:gravity="center"			android:text="@string/signup" />	</LinearLayout></RelativeLayout>