<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_img7"
    tools:context=".fragments.login.LoginFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:gravity="center">



        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/email"
            android:text="sharmag@gmail.com"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:text="12345678"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:text="@string/chk_remember_me"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_small" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_selector_style"
            android:text="@string/login"
            android:textSize="@dimen/text_size_small" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCreateAccount"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/create_account"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/bForgot"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget_pass"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
