<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/book_img"
    android:layout_gravity="center"
    tools:context=".fragments.QuizCategoryFragment">
  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:padding="16dp"
      android:layout_marginTop="130dp"
      android:gravity="center"
      android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvEasyQuiz"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="start"
        android:layout_marginTop="3dp"
        android:textSize="@dimen/text_size_medium"
        android:padding="10dp"
        android:background="@drawable/btn_selector_style"
        android:textColor="@color/colorWhite"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:focusable="true"
        android:text="@string/tv_easy" />
    <TextView

        android:id="@+id/tvAverageQuiz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_gravity="start"
        android:textSize="@dimen/text_size_medium"
        android:padding="10dp"
        android:background="@drawable/btn_selector_style"
        android:textColor="@color/colorWhite"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:focusable="true"
        android:text="@string/tv_average" />

    <TextView

        android:id="@+id/tvDifficultQuiz"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="3dp"
        android:textSize="@dimen/text_size_medium"
        android:padding="10dp"
        android:background="@drawable/btn_selector_style"
        android:textColor="@color/colorWhite"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:focusable="true"
        android:text="@string/tv_difficult" />
    <TextView
        android:id="@+id/tvRandomQuiz"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end"
        android:textSize="@dimen/text_size_medium"
        android:padding="10dp"
        android:background="@drawable/btn_selector_style"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorWhite"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:focusable="true"
        android:text="@string/tv_random" />
  </LinearLayout>
</LinearLayout>